--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-FFDoku, a sudoko for Firefox OS !
+FFDoku, a sudoku for Firefox OS !
+
+FFDoku is a Sudoku game completly developed in HTML5. You can play using only a modern navigator without any installation !
