--- a/README
+++ b/README
@@ -1,3 +1,21 @@
-FFDoku, a sudoku for Firefox OS !
+/*
+    FFDoku is a Sudoku game completly developed in HTML5 and primarily designed for the Firefox OS.
+    You can play using only a modern navigator without any installation !
+    
+    Copyright (C) 2012 Erwan GUYADER <erwanguyader@mailoo.org>, Antoine DUPARAY <antoineduparay@gmail.com>
 
-FFDoku is a Sudoku game completly developed in HTML5. You can play using only a modern navigator without any installation !
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Affero General Public License as
+    published by the Free Software Foundation, either version 3 of the
+    License, or (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Affero General Public License for more details.
+
+    You should have received a copy of the GNU Affero General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+
+*/
