Modification de mon adresse e-mail

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
     FFDoku is a Sudoku game completly developed in HTML5 and primarily designed for the Firefox OS.
     You can play using only a modern navigator without any installation !
     
-    Copyright (C) 2012 Erwan GUYADER <erwanguyader@mailoo.org>, Antoine DUPARAY <antoineduparay@gmail.com>
+    Copyright (C) 2012 Erwan GUYADER <erwanguyader@mailoo.org>, Antoine DUPARAY <flaburgan@geexxx.fr>
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as
